edit row and language models. create mapper for languageservice. edit language service. create html for language, and create controller for for language change view-row.html. add dto

--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Hello world</h1>
 <h1>хало</h1>
-<a href="view_rows?id=1">Dictionary with 4 symbols</a>
-<a href="view_rows?id=2">Dictionary with 5 digits</a>
+<a href="view-rows">Посмотреть весь словарь</a>
+<a href="/language/view-all">Посмотреть все языки </a>
+<a href="/language/add">Добавить язык </a>
 </body>
 </html>
