--- a/src/main/webapp/WEB-INF/templates/fragments/head.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/head.html
@@ -1,3 +1,7 @@
-<head lang="ru" th:fragment="head">
-    <meta charset="utf-8">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
 </head>
+<body>
