--- a/src/main/webapp/WEB-INF/templates/add-row.html
+++ b/src/main/webapp/WEB-INF/templates/add-row.html
@@ -14,13 +14,13 @@
 
         <select class="form-control" name="languageSourceId" id="languageSourceId">
             <option value="0">Выберите язык слова</option>
-            <option th:each="languageWord : ${listLanguage}" th:value="${languageWord.languageId}"
+            <option th:each="languageWord : ${listLanguage}" th:value="${languageWord.getLanguageUUID}"
                     th:text="${languageWord.languageName}"></option>
         </select>
 
         <select class="form-control" name="languageTargetId" id="languageTargetId">
             <option value="0">Выберите язык перевода</option>
-            <option th:each="languageTranslate : ${listLanguage}" th:value="${languageTranslate.languageId}"
+            <option th:each="languageTranslate : ${listLanguage}" th:value="${languageTranslate.getLanguageUUID}"
                     th:text="${languageTranslate.languageName}"></option>
         </select>
 
