change findall method. less use storage. change interface daoword

--- a/src/main/webapp/WEB-INF/templates/add-row.html
+++ b/src/main/webapp/WEB-INF/templates/add-row.html
@@ -12,13 +12,13 @@
     <form th:action="@{/add-row}" th:object="${requestAddPairWordsDTO}" method="post"
           accept-charset="UTF-8">
 
-        <select class="form-control" name="languageSourceId" id="languageSourceId">
+        <select class="form-control" name="languageSourceUUID" id="languageSourceUUID">
             <option value="0">Выберите язык слова</option>
             <option th:each="languageWord : ${listLanguage}" th:value="${languageWord.getLanguageUUID}"
                     th:text="${languageWord.languageName}"></option>
         </select>
 
-        <select class="form-control" name="languageTargetId" id="languageTargetId">
+        <select class="form-control" name="languageTargetUUID" id="languageTargetUUID">
             <option value="0">Выберите язык перевода</option>
             <option th:each="languageTranslate : ${listLanguage}" th:value="${languageTranslate.getLanguageUUID}"
                     th:text="${languageTranslate.languageName}"></option>
