--- a/src/main/webapp/WEB-INF/templates/view-rows.html
+++ b/src/main/webapp/WEB-INF/templates/view-rows.html
@@ -13,13 +13,13 @@
               accept-charset="UTF-8">
 
             <select class="form-control" name="dropDownListSourceLanguage" id="dropDownListSourceLanguage">
-                <option value="0">Выберите язык слова</option>
+                <option value="">Выберите язык слова</option>
                 <option th:each="languageWord : ${listLanguage}" th:value="${languageWord.languageUUID}"
                         th:text="${languageWord.languageName}"></option>
             </select>
 
             <select class="form-control" name="dropDownListTargetLanguage" id="dropDownListTargetLanguage">
-                <option value="0">Выберите язык перевода</option>
+                <option value="">Выберите язык перевода</option>
                 <option th:each="languageTranslate : ${listLanguage}" th:value="${languageTranslate.languageUUID}"
                         th:text="${languageTranslate.languageName}"></option>
             </select>
