--- a/src/main/webapp/WEB-INF/templates/search-row.html
+++ b/src/main/webapp/WEB-INF/templates/search-row.html
@@ -8,8 +8,7 @@
 <body>
 
 <div>
-    <form action="#" th:action="@{/search_row/result}" th:object="${row}" method="get" accept-charset="UTF-8">
-        <input name="id" type="hidden" th:valuetype="String" th:value="${id}">
+    <form action="#" th:action="@{/search-row/result}" method="GET" accept-charset="UTF-8">
         <input type="text" th:field="*{key}" placeholder="Введите ключ"><br>
         <div>
             <button>Найти по ключу</button>
@@ -19,9 +18,6 @@
 
     <a th:href="@{/add_row(id = ${id})}"
        th:text="Add"></a>
-
-    <a th:href="@{/delete_row(id = ${id})}"
-       th:text="Delete"></a>
 
     <a th:href="@{/main}">Back to choose</a>
 </div>
