--- a/src/main/webapp/WEB-INF/templates/language/view-all.html
+++ b/src/main/webapp/WEB-INF/templates/language/view-all.html
@@ -26,6 +26,7 @@
         </tbody>
     </table>
     <br>
+    <a th:href="@{/language/add}">Добавить язык </a>
     <a th:href="@{/main}">Back to choose</a>
 </div>
 
