rename all wordVale mentions to wordTranslation. rename dto fields. rename some metods in services and dao layer

--- a/src/main/webapp/WEB-INF/templates/add-row.html
+++ b/src/main/webapp/WEB-INF/templates/add-row.html
@@ -25,7 +25,7 @@
         </select><br>
 
         <input type="text" th:field="*{wordKey}" placeholder="Введите ключ">
-        <input type="text" th:field="*{wordValue}" placeholder="Введите значение"><br>
+        <input type="text" th:field="*{wordTranslation}" placeholder="Введите значение"><br>
 
         <button type="submit" value="add-row">Сохранить строку</button>
     </form>
